# OpenGL_Engine

./: .clang-format  .gitignore  GameEngine.sln  README.md  prepareProject.sh  rr.sh  tmp.diff  tmp2.diff
CMake/: CMakeLists.txt  CMakeLists.txt_n  GameEngineSources.cmake  LibNoiseSources.cmake  TerrainGeneratorSources.cmake  TestGame.cmake  UtilsSources.cmake  getSources.sh  runQtCreator_x86.sh
CMake/Includes/: GameEngineIncludes.cmake
CMake/Sources/: GameEngineTests.cmake  Unix.cmake  UtilsSources.cmake  WindowsSources.cmake
Data.bak/: Conf.ini  LpCastle.mtl  Wall.mtl  heightmap_Kingdom_1.terrain  heightmap_Kingdom_1.terrain.backup  heightmap_Kingdom_2.terrain.backup  heightmap_Kingdom_3.terrain  heightmap_Kingdom_3.terrain.backup  heightmap_Kingdom_3.terrainConfig  heightmap_Kingdom_4.terrain  heightmap_Kingdom_4.terrain.backup  heightmap_Kingdom_5.terrain.backup  required_files.inf  required_files[Konflikt 1].inf  required_files[Konflikt 2].inf  required_files[Konflikt].inf
Data.bak/Example/: cube.dae  cube.mtl  cube_one_material.mtl  scene.dae  test.mtl
Data.bak/GUI/: RpgGUI.xml  testgui.xml
Data.bak/Gwint/: RenderQuad.mtl
Data.bak/Kingdom/: MainHause.mtl  Stairs._collider.mtl  Stairs.mtl  Tower.mtl  WallWithGate.mtl
Data.bak/Maps/: MainRPGMap.map  SavedTestMap.map  Simple.map  TestMap.map
Data.bak/Meshes/: 1.dae  1.fbx  Cube.fbx  Landspace.mtl  Landspace2.mtl  Wolf_With_Baked_Action_Animations_For_Export_One_Mesh.dae  box.dae  box.fbx  plane_sphere.mtl  sphere.mtl  sun.mtl  untitled.bengine
Data.bak/Plans/: divide.m  matlab.m
Data.bak/Prefabs/: Enemy.xml  Ogre.xml
Data.bak/Scenes/: TestSene (1).xml  TestSene.json  TestSene.xml  TestSene.xml.backup  TestSene.xml.bak
Data.bak/Tmp/: Free Wooden Crates.7z
Data.bak/Trees/: palm.mtl
GameEngine/: GameEngine.vcxproj
GameEngine/Api/: Api.hpp  ApiMessages.h
GameEngine/Camera/: Camera.cpp  Camera.h  Camera2D.h  FirstPersonCamera.cpp  FirstPersonCamera.h  Frustrum.cpp  Frustrum.h  Plane.h  ThridPersonCamera.cpp  ThridPersonCamera.h
GameEngine/Common/: common.hpp
GameEngine/Debug_/: Log.cpp  Log.h
GameEngine/Display/: DisplayManager.cpp  DisplayManager.hpp
GameEngine/Engine/: Configuration.cpp  Configuration.h  Debuger.cpp  Debuger.h  Engine.cpp  Engine.h  LoD.h  Projection.cpp  Projection.h
GameEngine/Input/: Input.cpp  Input.h  InputManager.cpp  InputManager.h  KeyCodes.h
GameEngine/Lights/: Light.cpp  (+2 more)
GameEngineCM/: CMakeLists.txt  configure.bash
GameEngineTests/: GameEngineTests.vcxproj
Gwint/: Gwint.cpp  Renderer.h
GwintServer/: GameServer.h  GwintServer.vcxproj
ProjectUtils/: .clang-format  Conf.xml  Dockerfile  DockerfileWithMinGW  InstallDependencies  InstallDependencies.sh  InstallStartupPackages.sh  Notes.txt  applyPreckbuild.sh  convertToAsciiGit.sh  convert_shaders.py  createAllProjects.sh  createApp.sh  export_xml_anim.py  getAllSourcesAndIncludes.sh  getDataAndTools.py  getSources.sh  getTools.sh  googedrive.py  precheckBuild.sh  prepareAllProjects.sh  prepareProject.sh  prepareSdk.sh  prepareSdkArch.sh  prepareSdkUbuntu.sh  prepareSolution.sh  removeDuplicates.py  rr.sh  runTestsRemote.sh  setEnv.sh  tuxdrive-1.0.12.deb  windowsDepedencies.sh
ProjectUtils/SDK/: CMakeLists.txt
ProjectUtlis/: prepareProject.sh
Solutions/Android/app/src/main/cpp/: CMakeLists.txt  exampleMain.cpp
Solutions/CMake/: Avatar.cmake  Benchmark.cmake  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.user.4.8-pre1  Common.cmake  DirectXApi.cmake  Editor.cmake  Game.cmake  GameEngine.cmake  GameEngineTest.cmake  GameServer.cmake  GraphicsApi.cmake  GraphicsApiSources.cmake  Input.cmake  LibNoise.cmake  NetworkUtils.cmake  NetworkUtilsTests.cmake  OpenGLApi.cmake  TerrainGenerator.cmake  TestGame.cmake  Tests.cmake  Toolchain-Ubuntu-mingw32.cmake  Utils.cmake  VulkanApi.cmake  WxEditor.cmake  app.manifest  dupa.Includes.cmake  dupa.Sources.cmake  getAllSourcesAndIncludes.sh  getSources.sh  mingw-w64-x86_64.cmake
Solutions/CMake/Includes/: AvatarIncludes.cmake  BenchmarkIncludes.cmake  CommonIncludes.cmake  DirectXApiIncludes.cmake  EditorIncludes.cmake  GameEngineIncludes.cmake  GameEngineTestsIncludes.cmake  GameIncludes.cmake  GraphicsApiIncludes.cmake  GwintIncludes.cmake  GwintServerIncludes.cmake  Input.cmake  InputIncludes.cmake  OpenGLApiIncludes.cmake  RpgGameServerIncludes.cmake  SdlApiIncludes.cmake  SdlOpenGLIncludes.cmake  TerrainGenerationIncludes.cmake  TestGameIncludes.cmake  TestsIncludes.cmake  UtilsIncludes.cmake  UtilsNetworkIncludes.cmake  UtilsNetworkTestsIncludes.cmake  VulkanApiIncludes.cmake  WindowAppCreatorIncludes.cmake  WxEditorIncludes.cmake  dupaIncludes.cmake
Solutions/CMake/Sources/: AvatarSources.cmake  BenchmarkSources.cmake  CommonSources.cmake  DirectXApiSources.cmake  EditorSources.cmake  GameEngineSources.cmake  GameEngineTests.cmake  GameEngineTestsSources.cmake  GameSources.cmake  GraphicsApiSources.cmake  GwintServerSources.cmake  GwintSources.cmake  InputSources.cmake  OpenGLApiSources.cmake  RpgGameServerSources.cmake  SdlApiSources.cmake  SdlOpenGLSources.cmake  TerrainGenerationSources.cmake  TerrainGeneratorSources.cmake  TestGameSources.cmake  TestsSources.cmake  Unix.cmake  UtilsNetworkSources.cmake  UtilsNetworkTestsSources.cmake  UtilsSources.cmake  VulkanApiSources.cmake  WindowAppCreatorSources.cmake  WindowsSources.cmake  WxEditorSources.cmake  dupaSources.cmake
Solutions/Components/: CMakeLists.txt
Solutions/SceneLib/: CMakeLists.txt
TerrainGeneration/: Configuration.h  Image.cpp  Image.h  SingleTon.h  Terrain.cpp  Terrain.h  Tests.cpp  Tests.h  heightmap.raw  main.cpp
TestGame/: CharacterStats.h  Conf.xml  MainScene.cpp  MainScene.h  Player.cpp  Player.h  TestGame.vcxproj  main.cpp  terrain8bit.raw
Utils/: ParseUtils.cpp  SingleTon.h  Thread.hpp  Types.h  Utils.cpp  Utils.h  Utils.vcxproj  math.hpp  optional.hpp
WindowAppCreator/: WindowAppCreator.cpp  WindowAppCreator.h  WindowAppCreator.vcxproj  main.cpp
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
(+4030 files in other folders)
